# WorkloadSpecialization

./: .gitignore
DBx1000/: CMakeLists.txt  Makefile  config-std.h  config.h  test.py
DBx1000/benchmarks/: SYNTH_schema.txt  synth_query.cpp  synth_query.h  synth_txn.cpp  synth_wl.cpp  synthetic.h  test_txn.cpp  tpcc_const.h  tpcc_txn.cpp  tpcc_wl.cpp
DBx1000/concurrency_control/: row_mvcc.cpp  row_ts.cpp  row_ts.h
DBx1000/scripts/: .experiment.py.swp  .out_to_csv.py.swp  experiment.py  figure.py  out_to_csv.py  parse_out.py
DBx1000/storage/: index_btree.cpp  row.cpp  row.h
DBx1000/system/: global.h  main.cpp  manager.cpp  manager.h  mcs_lock.cpp  mcs_lock.h  mem_alloc.cpp  mem_alloc.h  query.cpp  query.h  txn.cpp  txn.h  wl.cpp  wl.h
clang-tool/: CMakeLists.txt  gen_compile_commands.sh  run_on_tpcc.sh  setup.sh  test.dot
clang-tool/cmake/: .FindLLVM.cmake.swp  FindClang.cmake
clang-tool/src/: CMakeLists.txt  main.cc
clang-tool/src/actions/: frontendaction.cc  frontendaction.h
clang-tool/src/consumer/: consumer.cc  consumer.h
clang-tool/src/finder/: dbaccess.h  dbgraphconstructor.cc  dbgraphconstructor.h  finder.h  integervariablefinder.cc  path_fragment.cpp  path_fragment.h
clang-tool/src/transformer/: dbspecializer.cc  dbspecializer.h  functioncalltransformer.h  transformer.cc  transformer.h
clang-tool/src/utils/: ast_utils.cpp  ast_utils.h  dbanalysisstorage.cpp  dbanalysisstorage.h
