cmake_minimum_required(VERSION 3.15)
project(DBx1000)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(benchmarks)
include_directories(concurrency_control)
include_directories(storage)
include_directories(system)

add_executable(DBx1000
        benchmarks/test.h
        benchmarks/test_txn.cpp
        benchmarks/test_wl.cpp
        benchmarks/tpcc.h
        benchmarks/tpcc_const.h
        benchmarks/tpcc_helper.cpp
        benchmarks/tpcc_helper.h
        benchmarks/tpcc_query.cpp
        benchmarks/tpcc_query.h
        benchmarks/tpcc_txn.cpp
        benchmarks/tpcc_wl.cpp
        benchmarks/ycsb.h
        benchmarks/ycsb_query.cpp
        benchmarks/ycsb_query.h
        benchmarks/ycsb_txn.cpp
        benchmarks/ycsb_wl.cpp
        concurrency_control/dl_detect.cpp
        concurrency_control/dl_detect.h
        concurrency_control/occ.cpp
        concurrency_control/occ.h
        concurrency_control/plock.cpp
        concurrency_control/plock.h
        concurrency_control/row_lock.cpp
        concurrency_control/row_lock.h
        concurrency_control/row_mvcc.cpp
        concurrency_control/row_mvcc.h
        concurrency_control/row_occ.cpp
        concurrency_control/row_occ.h
        concurrency_control/row_ts.cpp
        concurrency_control/row_ts.h
        concurrency_control/row_vll.cpp
        concurrency_control/row_vll.h
        concurrency_control/vll.cpp
        concurrency_control/vll.h
        storage/catalog.cpp
        storage/catalog.h
        storage/index_base.h
        storage/index_btree.cpp
        storage/index_btree.h
        storage/index_hash.cpp
        storage/index_hash.h
        storage/row.cpp
        storage/row.h
        storage/table.cpp
        storage/table.h
        system/global.cpp
        system/global.h
        system/helper.cpp
        system/helper.h
        system/main.cpp
        system/manager.cpp
        system/manager.h
        system/mem_alloc.cpp
        system/mem_alloc.h
        system/parser.cpp
        system/query.cpp
        system/query.h
        system/stats.cpp
        system/stats.h
        system/thread.cpp
        system/thread.h
        system/txn.cpp
        system/txn.h
        system/wl.cpp
        system/wl.h
        config-std.h
        config.cpp
        config.h)
